src/objects/filegen__ACH_Params__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <customSettingsVisibility>Public</customSettingsVisibility>
    <fields>
        <fullName>filegen__ACH_Id__c</fullName>
        <label>ACH Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>filegen__Bank_ACH_Code__c</fullName>
        <label>Bank ACH Code</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>filegen__Bank_Account_Number__c</fullName>
        <label>Bank Account Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>filegen__Bank_Code__c</fullName>
        <label>Bank Code</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>filegen__Bank_Name__c</fullName>
        <label>Bank Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>filegen__Bank_Short_Name__c</fullName>
        <label>Bank Short Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>filegen__Fed_Tax_Id__c</fullName>
        <label>Fed Tax Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>filegen__Organization_Name__c</fullName>
        <label>Organization Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>filegen__Routing_Number__c</fullName>
        <label>Routing Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>ACH Params (Deprecated)</label>
</CustomObject>